# Drift

./: .gitignore  LICENSE  README.md
.github/workflows/: build-windows.yml  release.yml
docs/: 15-改动日志.md  20-半自动更新功能开发规划.md
drift/: README.md  package-lock.json  package.json
drift/public/: help.html
drift/src/: App.css  App.tsx
drift/src-tauri/: Cargo.toml  tauri.conf.json
drift/src-tauri/capabilities/: default.json
drift/src-tauri/icons/: icon.icns
drift/src-tauri/src/: app_config.rs  bilibili.rs  lib.rs  logging.rs  system_fonts.rs  tray.rs  update_check.rs  window_control.rs
drift/src-tauri/src/bilibili/: auth.rs  cookies.rs  diagnostics.rs  emote_probe.rs  errors.rs  http.rs  mod.rs  protocol.rs  sc_probe.rs  send.rs  session.rs  types.rs  ws.rs
drift/src-tauri/src/bilibili/send/: diagnostics.rs  mod.rs  request.rs  state.rs  validation.rs
drift/src-tauri/src/window_control/: edit_mode.rs  layout.rs  mod.rs  send_window.rs  shortcuts.rs  state.rs
drift/src/components/: ControlPanel.tsx  DanmakuHistoryDrawer.tsx  DanmakuOverlay.tsx  DanmakuStatsDrawer.tsx  DanmakuTrack.tsx  EditModePanel.tsx  MockDanmakuPanel.tsx  SendDanmakuWindow.tsx
drift/src/components/control/: AboutSettings.tsx  AccountSettings.tsx  (+11 more)
drift/src/data/: mockDanmaku.ts
drift/src/hooks/: useDanmakuRuntime.ts
drift/src/styles/: control-panel.css  edit-mode.css  history-drawer.css  mock-panel.css  send-window.css  tailwind.css
drift/src/types/: auth.ts  config.ts  danmaku.ts
drift/src/utils/: classNames.ts  danmakuRuntime.ts  danmakuStats.ts  filterRules.ts  qrCode.ts
(+26 files in other folders)
